--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,42 @@ body{
     margin-bottom: 1em;    
 }
 
+#countdown, #countdowntitle{
+    font-size: 5em;
+    color: white;
+    float: left;
+    width: 100%;
+    text-align: center;
+    height: fit-content;
+    margin:auto;
+}
+
+#countdowntitle{
+    font-size: 3em;
+    margin-bottom: 0.5em;
+}
+
+.countdownwrapper{
+  height: 10em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  justify-content: center;
+  float: left;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin-top: 1em;
+  margin-bottom: 1em;
+  width: 100%;
+  -moz-box-shadow:    
+        inset 0px 11px 8px -10px #000,
+        inset 0px -11px 8px -10px #000; 
+  -webkit-box-shadow: 
+        inset 0px 11px 8px -10px #000,
+        inset 0px -11px 8px -10px #000; 
+  box-shadow: 
+        inset 0px 11px 8px -10px #000,
+        inset 0px -11px 8px -10px #000; 
+}
+
 .Footer{
     float: left;
     color:white;
